<?xml version="1.0"?>
<package format="2">
  <name>lidar_tracklet_compare</name>
  <version>1.14.0</version>
  <description>Lidar tracklet compare node</description>
  <maintainer email="ahmedius2@gmail.com">Ahmet Soyyigit</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>jsk_recognition_utils</depend>
  <depend>jsk_topic_tools</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
</package>
